# vaporwave-merch-scraper

./: .gitignore  README.md  mypy.ini  pyproject.toml
.github/: last-run.txt
.github/workflows/: build.yml  scrape-and-upload.yml
resources/: debug_labels.txt  labels.txt
resources/tests/: --25_merch_item_available_cassette_and_vinyl.html  --26_merch_item_available_cassette_and_soldout_vinyl.html  blue-album_merch_item_available_vinyl_and_soldout_cassette.html  label_merch_3_unique_merch_paths.html  pink-album_merch_item_available_vinyl_and_soldout_cassette.html
scraper/: async_helper.py  filesystem_helper.py  futures_helper.py  main.py  model.py  scraper.py
tests/scraper/: test_model.py  test_scraper.py
