[tool.poetry]
name = "vaporwave-merch-tracker"
version = "0.1.0"
description = ""
authors = ["idleherb"]
license = "unlicense"

[tool.poetry.dependencies]
python = "^3.10"
parsel = "^1.8.1"
aiohttp = "^3.9.1"
dataclasses-json = "^0.6.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
mypy = "^1.7.1"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"
pytest-aiohttp = "^1.0.5"
pytest-unordered = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
