[tool.poetry]
name = "vaporwave-merch-tracker"
version = "0.1.0"
description = ""
authors = ["idleherb"]
license = "unlicense"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.1"
dataclasses-json = "^0.6.3"
parsel = "^1.8.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
pytest = "^8.0.2"
pytest-aiohttp = "^1.0.5"
pytest-cov = "^4.1.0"
pytest-unordered = "^0.5.2"
ruff = "^0.1.7"

[tool.ruff]
target-version = "py310"
line-length = 120
select = ["ALL"]
ignore = [
    "A003", # id as name is fine
    "D10", # no docstrings here
    "D203", # Conflicting with D211
    "D213", # Conflicting with D212
    "S3", # no cryptography here
    "EM101", "TRY003", # string literals in exceptions are fine
    "T201", # print is fine
]

[tool.ruff.per-file-ignores]
"tests/*" = [
    "S101", # allow assertions
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
