[tool.poetry]
name = "vaporwave-merch-tracker"
version = "0.1.0"
description = ""
authors = ["idleherb"]
license = "unlicense"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.11.9"
dataclasses-json = "^0.6.7"
parsel = "^1.9.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pytest = "^8.3.3"
pytest-aiohttp = "^1.0.5"
pytest-cov = "^5.0.0"
pytest-unordered = "^0.5.2"
ruff = "^0.8"

[tool.mypy]
pretty = true
strict = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_unreachable = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
    "A003", # id as name is fine
    "D10", # no docstrings here
    "D203", # Conflicting with D211
    "D213", # Conflicting with D212
    "S3", # no cryptography here
    "EM101", "TRY003", # string literals in exceptions are fine
    "T201", # print is fine
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # allow assertions
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
